--- a/resume_template/css/style.css
+++ b/resume_template/css/style.css
@@ -45,12 +45,11 @@ main {
 }
 #home {
   flex-grow: 1;
-  
-  background: linear-gradient(45deg, hsl(20, 100%, 60%, 1) 50%, hsla(120, 60%, 70%, 1) 50%,);
-  background: -o-linear-gradient(to bottom right, hsla(20, 100%, 60%, 1) 50%, hsla(120, 60%, 70%, 1) 50%,);
-  background: -moz-linear-gradient(to bottom right, hsla(20, 100%, 60%, 1) 50%, hsla(120, 60%, 70%, 1) 50%,);
-  background: -webkit-linear-gradient(to bottom right, hsla(20, 100%, 60%, 1) 50%, hsla(120, 60%, 70%, 1) 50%,);
-  background: -ms-linear-gradient(to bottom right, hsla(20, 100%, 60%, 1) 50%, hsla(120, 60%, 70%, 1) 50%,);
+  background: linear-gradient(45deg, hsl(20, 100%, 60%) 50%, hsl(120, 60%, 70%) 50%,);
+  background: -o-linear-gradient(45deg, hsl(20, 100%, 60%) 50%, hsl(120, 60%, 70%) 50%,);
+  background: -moz-linear-gradient(45deg, hsl(20, 100%, 60%) 50%, hsl(120, 60%, 70%) 50%,);
+  background: -webkit-linear-gradient(45deg, hsl(20, 100%, 60%) 50%, hsl(120, 60%, 70%) 50%,);
+  background: -ms-linear-gradient(45deg hsl(20, 100%, 60%) 50%, hsl(120, 60%, 70%) 50%,);
 }
 #mobile {
   flex-grow: 1;
